frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: "nextjs-app"
  name: "nextjs-app"
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "nextjs-app"
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: "nextjs-app"
    spec:
      containers:
        - image: xgenbox/my-nextjs-app-image:1.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /manifest.json
              port: 3000
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
            initialDelaySeconds: 60
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /manifest.json
              port: 3000
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
            initialDelaySeconds: 30
          name: "nextjs-app"
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 1000m
              memory: 2G
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
