frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjsfront
spec:
  selector:
    app: nextjs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
